# comboauth

./: Cargo.toml  MILESTONES.md  README.md
docs/adr/: 0001-architecture.md  0002-profile-storage.md
docs/security/: AUDIT.md  m6-gate-checklist.md  threat-model.md
scripts/: launch.sh
src/: activation.rs  app.rs  audit.rs  combo.rs  delivery.rs  error.rs  ipc.rs  lib.rs  main.rs  persistence.rs  profile.rs  service.rs  ui.rs
src/focus/: linux_atspi.rs  macos_ax.rs  mod.rs
src/hotkey/: linux.rs  macos.rs  mod.rs
src/paste/: linux.rs  macos.rs  mod.rs
src/picker/: macos.rs
src/vault/: linux_oo7.rs  macos_keychain.rs  mock.rs  mod.rs
