[package]
name = "comboauth"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
thiserror = "2.0.18"
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
oo7 = { version = "0.6", features = ["tokio", "native_crypto"] }
tokio = { version = "1", features = ["rt"] }
