[package]
name = "comboauth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "comboauth"
path = "src/main.rs"

[[bin]]
name = "comboauth-daemon"
path = "src/bin/comboauth-daemon.rs"

[[bin]]
name = "comboauth-tray"
path = "src/bin/comboauth-tray.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
zeroize = { version = "1.8", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
arboard = "3"
enigo = "0.2"
global-hotkey = "0.6"
tray-icon = "0.19"

[target.'cfg(target_os = "linux")'.dependencies]
oo7 = { version = "0.6", features = ["tokio", "native_crypto"] }
atspi = { version = "0.25", features = ["connection", "proxies"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2", optional = true }
core-graphics = "0.23"
core-foundation = "0.9"
core-foundation-sys = "0.8"
accessibility-sys = "0.1"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }

[features]
macos-keychain = ["security-framework"]
